[PASSWORD]: Change / Reset password support
