# jaclang_jaseci/models/ephemerals.py
@@ -16,6 +16,26 @@ class UserVerification(BaseModel):
     code: str
 
 
+class UserChangePassword(BaseModel):
+    """User Creation Request Model."""
+
+    old_password: str
+    new_password: str
+
+
+class UserForgotPassword(BaseModel):
+    """User Creation Request Model."""
+
+    email: EmailStr
+
+
+class UserResetPassword(BaseModel):
+    """User Creation Request Model."""
+
+    code: str
+    password: str
+
+
 class AttachSSO(BaseModel):
     """Attach SSO Request Model."""
 
